--- a/libft/makefile
+++ b/libft/makefile
@@ -1,6 +1,6 @@
 all: libft.a
 
-libft.a: part1.o part2.o part3.o part4.o part5.o part6.o part7.o
+libft.a: part1.o part2.o part3.o part4.o part5.o part6.o part7.o part8.o
 	ar r libft.a *.o
 part1.o: part1.c
 	gcc -c part1.c
@@ -16,5 +16,9 @@ part6.o: part6.c
 	gcc -c part6.c
 part7.o: part7.c
 	gcc -c part7.c
+part8.o: part8.c
+	gcc -c part8.c
 clean:
 	rm -rf *.o
+fclean:
+	rm -rf libft.a
