--- a/libft/makefile
+++ b/libft/makefile
@@ -1,27 +1,61 @@
+NAME = libft.a
 
-NAME=libft.a
+CC = gcc
+CFLAGS = -Wall -Wextra -Werror
+AR = ar -rcs
+RM = rm -f
 
-SRCS =	ft_atoi.c ft_bzero.c ft_calloc.c ft_isalnum.c ft_isalpha.c ft_isascii.c\
-		ft_isdigit.c ft_isprint.c ft_itoa.c ft_memccpy.c ft_memchr.c ft_memcmp.c\
-		ft_memcpy.c ft_memmove.c ft_memset.c ft_putchar_fd.c ft_putendl_fd.c\
-		ft_putnbr_fd.c ft_putstr_fd.c ft_strchr.c ft_strdup.c\
-		ft_strjoin.c ft_strlcat.c ft_strlcpy.c ft_strlen.c ft_substr.c\
-		ft_strncmp.c ft_strrchr.c ft_strtrim.c\
-		ft_tolower.c ft_toupper.c ft_strnstr.c ft_split.c ft_strmapi.c
+FILES = ft_memset.c\
+		ft_bzero.c\
+		ft_memcpy.c\
+		ft_memccpy.c\
+		ft_memmove.c\
+		ft_memchr.c\
+		ft_memcmp.c\
+		ft_strlen.c\
+		ft_strlcpy.c\
+		ft_strlcat.c\
+		ft_strchr.c\
+		ft_strrchr.c\
+		ft_strnstr.c\
+		ft_strncmp.c\
+		ft_atoi.c\
+		ft_isalpha.c\
+		ft_isdigit.c\
+		ft_isalnum.c\
+		ft_isascii.c\
+		ft_isprint.c\
+		ft_toupper.c\
+		ft_tolower.c\
+		ft_calloc.c\
+		ft_strdup.c\
+		ft_substr.c\
+		ft_strjoin.c\
+		ft_strtrim.c\
+		ft_split.c\
+		ft_itoa.c\
+		ft_strmapi.c\
+		ft_putchar_fd.c\
+		ft_putstr_fd.c\
+		ft_putendl_fd.c\
+		ft_putnbr_fd.c
 
-OBJ	 = 	$(SRCS:.c=.o)
+OBJS = $(FILES:%.c=%.o)
 
-FLAGS = -Wall -Wextra -Werror -c
+%.o: %.c libft.h
+	$(CC) $(CFLAGS) -c $< -o $@ 
+
+$(NAME): $(OBJS)
+	$(AR) $@ $^
+
 all: $(NAME)
 
-$(NAME): $(OBJ)
-	@ar rcs $(NAME) $(OBJ)
-$(OBJ): $(SRCS)
-	@gcc -c $(FLAGS) $(SRCS)
 clean:
-	@rm -f $(OBJ)
+	$(RM) $(OBJS)
 
 fclean: clean
-	@rm -f $(NAME)
-	
+	$(RM) $(NAME)
+
 re: fclean all
+
+.PHONY:all clean fclean re
